# astrbot_plugin_msgprocessor

./: .gitignore  README.md  _conf_schema.json  main.py  metadata.yaml  package-lock.json  package.json  pyproject.toml  sample_config.json  sample_rules.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
core/: __init__.py  engine.py  loader.py  matchers.py  models.py  modules.py  server.py  steps.py  window.py
src/: engine.ts  index.ts  types.ts
src/webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/webui/src/: App.css  App.tsx  api.ts  i18n-ui.ts  main.tsx  theme.ts  types.ts
src/webui/src/components/: PipelineEditor.tsx  StepsEditor.tsx
src/webui/src/theme/: index.ts
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  api.ts  i18n-ui.ts  main.tsx  theme.ts  types.ts
web/src/components/: PipelineEditor.tsx  StepsEditor.tsx  ThemeToggle.tsx
