[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "msgprocessor"
version = "0.1.0"
description = "AstrBot plugin: configurable text pipeline (same data layout as ApiDog: core + flat JSON in data dir)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.22.0",
]

[tool.setuptools.packages.find]
include = ["core*"]
